# rt-rs

./: .gitignore  Cargo.toml  README.md
src/: camera.rs  colour.rs  geometry.rs  image.rs  lib.rs  main.rs  material.rs  scalar.rs
src/geometry/: aabb.rs  bvh.rs  intersect.rs  plane.rs  ray.rs  sphere.rs  world.rs
src/image/: aspect.rs  buffer.rs  ppm.rs
